# py.maidata-reader

./: .gitignore  LICENSE  README.md  pyproject.toml  stdeb.cfg
.github/workflows/: publish.yml
src/maidata_reader/: __init__.py  core.py
